// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Results rendered component should match snapshot (cy) 1`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Cwestiwn
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Newid
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            cwestiwn
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p
    class="text-nhs-blue mb-2"
  >
    Ateb
  </p>
  <p
    class="overflow-auto"
  >
    test answer
  </p>
</div>
`;

exports[`Results rendered component should match snapshot (en) 1`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Question
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Change
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            question
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p
    class="text-nhs-blue mb-2"
  >
    Answer
  </p>
  <p
    class="overflow-auto"
  >
    test answer
  </p>
</div>
`;

exports[`Results rendered component should match snapshot (gd) 1`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Ceist
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Atharraich
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            ceist
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p
    class="text-nhs-blue mb-2"
  >
    Freagairt
  </p>
  <p
    class="overflow-auto"
  >
    test answer
  </p>
</div>
`;

exports[`Results renders correctly with unrelated answer (cy) 1`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Cwestiwn
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Newid
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            cwestiwn
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p>
    mae'n ymddangos nad yw eich ymholiad yn atebadwy.
  </p>
  <div
    class="nhsuk-details__text mb-6"
  >
    <p>
      Gallai hyn fod am nifer o resymau:
    </p>
    <ul>
      <li>
        nid yw eich ymholiad yn ymwneud â iechyd
      </li>
      <li>
        roedd eich ymholiad yn cynnwys iaith anaddas
      </li>
      <li>
        nid oedd digon o fanylion yn eich ymholiad
      </li>
    </ul>
  </div>
  <a
    class="nhsuk-button   "
    href="/"
  >
    Gofyn cwestiwn newydd
  </a>
</div>
`;

exports[`Results renders correctly with unrelated answer (en) 1`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Question
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Change
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            question
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p>
    It looks like your query may not be answerable.
  </p>
  <div
    class="nhsuk-details__text mb-6"
  >
    <p>
      This could be for several reasons:
    </p>
    <ul>
      <li>
        your query is not health related
      </li>
      <li>
        your query contained inappropriate language
      </li>
      <li>
        your query did not give enough detail
      </li>
    </ul>
  </div>
  <a
    class="nhsuk-button   "
    href="/"
  >
    Ask new question
  </a>
</div>
`;

exports[`Results renders correctly with unrelated answer (gd) 1`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Ceist
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Atharraich
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            ceist
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p>
    tha coltas gum b'urrainn nach biodh freagairt agad air do chuirimh.
  </p>
  <div
    class="nhsuk-details__text mb-6"
  >
    <p>
      Dh'fhaodadh seo a bhith airson grunn fiosrachaidhean:
    </p>
    <ul>
      <li>
        chan eil do chuirimh a' buntainn ri slàinte
      </li>
      <li>
        tha cànan sgrìobhte nach bu chòir ann do chuirimh
      </li>
      <li>
        cha tugadh tu digriannan gu leòr le do chuirimh
      </li>
    </ul>
  </div>
  <a
    class="nhsuk-button   "
    href="/"
  >
    Cur ceist ùr
  </a>
</div>
`;

exports[`Results renders correctly with unrelated answer when source is also present (cy) 1`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Cwestiwn
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Newid
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            cwestiwn
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p>
    mae'n ymddangos nad yw eich ymholiad yn atebadwy.
  </p>
  <div
    class="nhsuk-details__text mb-6"
  >
    <p>
      Gallai hyn fod am nifer o resymau:
    </p>
    <ul>
      <li>
        nid yw eich ymholiad yn ymwneud â iechyd
      </li>
      <li>
        roedd eich ymholiad yn cynnwys iaith anaddas
      </li>
      <li>
        nid oedd digon o fanylion yn eich ymholiad
      </li>
    </ul>
  </div>
  <a
    class="nhsuk-button   "
    href="/"
  >
    Gofyn cwestiwn newydd
  </a>
</div>
`;

exports[`Results renders correctly with unrelated answer when source is also present (cy) 2`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Cwestiwn
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Newid
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            cwestiwn
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p
    class="text-nhs-blue mb-2"
  >
    Ateb
  </p>
  <p
    class="overflow-auto"
  >
    test answer
  </p>
</div>
`;

exports[`Results renders correctly with unrelated answer when source is also present (en) 1`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Question
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Change
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            question
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p>
    It looks like your query may not be answerable.
  </p>
  <div
    class="nhsuk-details__text mb-6"
  >
    <p>
      This could be for several reasons:
    </p>
    <ul>
      <li>
        your query is not health related
      </li>
      <li>
        your query contained inappropriate language
      </li>
      <li>
        your query did not give enough detail
      </li>
    </ul>
  </div>
  <a
    class="nhsuk-button   "
    href="/"
  >
    Ask new question
  </a>
</div>
`;

exports[`Results renders correctly with unrelated answer when source is also present (en) 2`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Question
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Change
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            question
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p
    class="text-nhs-blue mb-2"
  >
    Answer
  </p>
  <p
    class="overflow-auto"
  >
    test answer
  </p>
</div>
`;

exports[`Results renders correctly with unrelated answer when source is also present (gd) 1`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Ceist
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Atharraich
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            ceist
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p>
    tha coltas gum b'urrainn nach biodh freagairt agad air do chuirimh.
  </p>
  <div
    class="nhsuk-details__text mb-6"
  >
    <p>
      Dh'fhaodadh seo a bhith airson grunn fiosrachaidhean:
    </p>
    <ul>
      <li>
        chan eil do chuirimh a' buntainn ri slàinte
      </li>
      <li>
        tha cànan sgrìobhte nach bu chòir ann do chuirimh
      </li>
      <li>
        cha tugadh tu digriannan gu leòr le do chuirimh
      </li>
    </ul>
  </div>
  <a
    class="nhsuk-button   "
    href="/"
  >
    Cur ceist ùr
  </a>
</div>
`;

exports[`Results renders correctly with unrelated answer when source is also present (gd) 2`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Ceist
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Atharraich
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            ceist
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p
    class="text-nhs-blue mb-2"
  >
    Freagairt
  </p>
  <p
    class="overflow-auto"
  >
    test answer
  </p>
</div>
`;

exports[`Results renders correctly with valid answer (cy) 1`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Cwestiwn
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Newid
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            cwestiwn
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p
    class="text-nhs-blue mb-2"
  >
    Ateb
  </p>
  <p
    class="overflow-auto"
  >
    test answer
  </p>
</div>
`;

exports[`Results renders correctly with valid answer (en) 1`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Question
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Change
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            question
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p
    class="text-nhs-blue mb-2"
  >
    Answer
  </p>
  <p
    class="overflow-auto"
  >
    test answer
  </p>
</div>
`;

exports[`Results renders correctly with valid answer (gd) 1`] = `
<div>
  <p
    class="text-md text-nhs-blue mb-2"
  >
    Ceist
  </p>
  <dl
    class="nhsuk-summary-list"
  >
    <div
      class="nhsuk-summary-list__row"
    >
      <dd
        class="nhsuk-summary-list__value"
      >
        test query
         (?)
      </dd>
      <dd
        class="nhsuk-summary-list__actions"
      >
        <a
          href="/?q=test+query#search-input"
        >
          Atharraich
          <span
            class="nhsuk-u-visually-hidden"
          >
             
            ceist
          </span>
        </a>
      </dd>
    </div>
  </dl>
  <p
    class="text-nhs-blue mb-2"
  >
    Freagairt
  </p>
  <p
    class="overflow-auto"
  >
    test answer
  </p>
</div>
`;
